<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"

    >

    <com.example.aplika.Feature.Deatile.scroll.ObservableScrollView
        android:id="@+id/ObservableScrollView"
        android:layout_width="match_parent"
        android:paddingBottom="100dp"
        android:clipToPadding="false"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.example.aplika.CoustomeView.NikeImageView
                    android:id="@+id/IvProductDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:viewAspectRatio="1.3"
                    />
            </FrameLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/TvProductTitleDetail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:textAppearance="@style/TextAppearance.MyTheme.Headline6"
                    app:layout_constraintEnd_toStartOf="@+id/TvProductPreviousPriceDetail"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="نام محصول" />

                <TextView
                    android:id="@+id/TvProductPreviousPriceDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:textAppearance="?textAppearanceBody2"
                    android:textColor="?colorSecondary"
                    tools:text="211313131"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/TvProductPriceCurrentDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="21313131"
                    android:textAppearance="@style/TextAppearance.MyTheme.Body1"
                    app:layout_constraintEnd_toEndOf="@+id/TvProductPreviousPriceDetail"
                    app:layout_constraintTop_toBottomOf="@+id/TvProductPreviousPriceDetail" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:textAppearance="@style/TextAppearance.MyTheme.Body2"
                android:text="@string/textSample" />
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"

                >

                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/addComment"
                    android:layout_gravity="left|center_vertical"
                    android:textAppearance="@style/TextAppearance.MyTheme.Headline6"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/commentUser"
                    android:layout_gravity="right|center_vertical"
                    android:textAppearance="@style/TextAppearance.MyTheme.Headline6"
                    android:textColor="?android:textColorSecondary"

                    />

            </FrameLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/RvCommentDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:clipToPadding="false"
                android:background="@drawable/background_shape_comment"

                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/BtnShowAllComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="gone"
                tools:visibility="visible"

                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:text="@string/viewAllComment"
                android:textAppearance="@style/TextAppearance.MyTheme.Headline6"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="31dp"

                />
        </LinearLayout>

    </com.example.aplika.Feature.Deatile.scroll.ObservableScrollView>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/CvToolbarDetail"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:cardElevation="4dp"
        android:alpha="0"
        app:cardCornerRadius="0dp"

        android:background="@android:color/transparent"
        >
        <TextView
            android:id="@+id/TvProductTitleDetailToolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="48dp"
            android:layout_gravity="center_vertical|right"
            tools:text="نام محصول"
            android:textAppearance="@style/TextAppearance.MyTheme.Headline6"
            />

    </com.google.android.material.card.MaterialCardView>
    <FrameLayout
        android:id="@+id/FrameLayoutToolbarDetail"
        android:layout_width="match_parent"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:translationZ="5dp"
        android:layout_height="?actionBarSize"
        tools:ignore="UnusedAttribute">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical|start"
            app:srcCompat="@drawable/ic_back"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            app:srcCompat="@drawable/ic_favorites_24dp"
            android:background="@drawable/background_favorite"
            />
    </FrameLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/addToCartBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        android:gravity="center"
        android:text="@string/addToCart"
        />
</androidx.coordinatorlayout.widget.CoordinatorLayout>